--- a/index.html
+++ b/index.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NAF MP</title>
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <header>
-      <div id="top-header">
-        <div id="logonaf">
-          <img src="./images/logo.jpg" />
-        </div>
-        <nav>
-          <ul>
-            <li>
-              <a href="#">About Us</a>
-            </li>
-            <li><a>What We Do</a></li>
-            <li><a>Join Us</a></li>
-            <li><a>Contact Us</a></li>
-            <li><a>Media Centre</a></li>
-            <li><a>Past Events</a></li>
-          </ul>
-        </nav>
+    <img src="./images/logo.jpg">
+    <nav>
+      
+      <div class="logo">
+        
+        <p>NAF</p>
       </div>
-    </header>
+      <ul>
+        <li>
+          <a href="#">About Us</a>
+        </li>
+        <li><a>What We Do</a></li>
+        <li><a>Join Us</a></li>
+        <li><a>Contact Us</a></li>
+        <li><a>Media Centre</a></li>
+        <li><a>Past Events</a></li>
+      </ul>
+    </nav>
   </body>
 </html>
